test/expected/declare_ro_exclam_k_b.out
declare ! as reference operator (S) returning bool
                                 ^
34: error: member operator "!" must have exactly 0 parameters
